# Real-Time-Human-Attention-Marketplace

./: .githubworkflowspublish-docs.yml  .gitignore  PROTOCOL.md  README.md  agent_wallet.json  deployment.md  docs.json  mint.json  monitor.html  package-lock.json  package.json  serve_monitor.js  test_ws.js  trigger_bid.js
.github/workflows/: publish-docs.yml
Public/: llms.txt
backend/: .env.example  API_DOCS.md  debug_db.ts  docker-compose.yml  package.json  tsconfig.json
docs/: AGENT_API_IMPLEMENTATION_PLAN.md  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_AUDIT.md  DEVELOPER_GUIDE.md  ELEVATOR_PITCH.md  api-reference.mdx  introduction.mdx  setup-guide.md  test.mdx
frontend/: .env.example  errors.txt  index.html  nixpacks.toml  package.json  tailwind.config.js  vite.config.ts
payment-router/: Anchor.toml  Cargo.toml  package-lock.json  package.json  pdas.txt  tsconfig.json
payment-router/programs/fee_splitter/: Cargo.toml
payment-router/programs/fee_splitter/src/: lib.rs
scripts/: attentium_client.py  e2e_test.py  smoke_test.py  test_agent.js
sdk/: README.md  package-lock.json  package.json
sdk/src/: index.ts
shared/: package.json
solana/: Anchor.toml
solana-program/: Anchor.toml  README.md  get_pubkey.js  key.txt  package-lock.json  package.json  pubkey.txt  save_pubkey.js
solana/programs/attention_marketplace/: Cargo.toml
solana/programs/attention_marketplace/src/: lib.rs
specs/: openapi.yaml
tests/: MANUAL_TESTING.md  README.md  signal_quality_integration.py  smoke_test_quality.py  test_openai_bouncer.sh  validate_system.py  verify_redis.sh
(+168 files in other folders)
