[package]
name = "fee_splitter"
version = "0.1.0"
description = "Fee splitter for x402 referrer revenue sharing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fee_splitter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
