[package]
name = "attention-marketplace"
version = "0.1.0"
description = "Solana program for the Attention Marketplace escrow and settlement"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "attention_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
